@@ -22,7 +22,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -32,6 +31,7 @@ import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
 
+import org.eclipse.core.internal.runtime.XmlProcessorFactory;
 import org.eclipse.core.runtime.IConfigurationElement;
 import org.eclipse.core.runtime.IExtension;
 import org.eclipse.core.runtime.IExtensionPoint;
@@ -59,8 +59,8 @@ import org.xml.sax.SAXException;
 /**
  * Checks that plugin.xml of specified bundles is valid and referred classes can
  * be accessed
- *
  */
+@SuppressWarnings("restriction")
 public class PluginWalkerTest {
 
 	private BundleContext bundleContext;
@@ -68,11 +68,11 @@ public class PluginWalkerTest {
 
 	@Before
 	public void setup() throws Exception {
-		Bundle bundle = FrameworkUtil.getBundle(PluginWalkerTest.this.getClass());
+		Bundle bundle = FrameworkUtil.getBundle(PluginWalkerTest.class);
 		assertNotNull("Make sure you're running this as a plugin test", bundle);
 		assertNotNull(bundle);
 		bundleContext = bundle.getBundleContext();
-		bundlesWithPluginXml = Arrays.asList("org.eclipse.e4.ui.css.swt", "org.eclipse.e4.ui.model.workbench",
+		bundlesWithPluginXml = List.of("org.eclipse.e4.ui.css.swt", "org.eclipse.e4.ui.model.workbench",
 				"org.eclipse.e4.ui.workbench.swt", "org.eclipse.ui.forms", "org.eclipse.ui.themes",
 				"org.eclipse.e4.ui.workbench", "org.eclipse.e4.ui.workbench.addons.swt", "org.eclipse.ui.ide",
 				"org.eclipse.e4.ui.css.core", "org.eclipse.ui.workbench", "org.eclipse.ui.navigator.resources",
@@ -169,12 +169,6 @@ public class PluginWalkerTest {
 
 	/**
 	 * Parses the plugin.xml file and provides access to its content
-	 *
-	 * @param bundle
-	 * @return
-	 * @throws SAXException
-	 * @throws IOException
-	 * @throws ParserConfigurationException
 	 */
 	private static Document getDocument(Bundle bundle) throws SAXException, IOException, ParserConfigurationException {
 		Document doc = null;
@@ -188,7 +182,7 @@ public class PluginWalkerTest {
 	}
 
 	private static DocumentBuilder createDocumentBuilder() throws ParserConfigurationException {
-		DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
+		DocumentBuilderFactory factory = XmlProcessorFactory.createDocumentBuilderFactoryWithErrorOnDOCTYPE();
 		factory.setNamespaceAware(true);
 		return factory.newDocumentBuilder();
 	}
